using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace AssetManagement.Domain.Software.ValueObjects
{
    public class SoftwareId
    {
        
    }
}