using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace AssetManagement.Domain.System.ValueObjects
{
    public class SystemId
    {
        public HardwareHash Hash { get; set; }
    }
}