using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace AssetManagement.Domain.User.ValueObjects
{
    public class UserId
    {
        
    }
}